// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render (serialisation) renders correctly document 1`] = `
"<!doctype html><html><head></head><body><script>function __ssr() {var r,s=document.currentScript,f=s.parentNode;h=f.parentNode;f.removeChild(s);h.removeChild(f);r=h.attachShadow({mode:h.getAttribute('mode')||'open'});while(f&&f.firstChild)r.appendChild(f.firstChild);}</script><x-hello><shadowroot><span>Hello, <x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          <script>__ssr()</script></shadowroot><slot></slot></x-yell>!<x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          <script>__ssr()</script></shadowroot>!</x-yell></span><script>__ssr()</script></shadowroot>World</x-hello></body></html>"
`;

exports[`render (serialisation) renders correctly node 1`] = `
"<x-hello><shadowroot><span>Hello, <x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          <script>__ssr()</script></shadowroot><slot></slot></x-yell>!<x-yell><shadowroot>
            <style>.test1,.test2 { font-weight: bold; }</style>
            <span class=\\"test1\\"><slot></slot></span>
          <script>__ssr()</script></shadowroot>!</x-yell></span><script>__ssr()</script></shadowroot>World</x-hello>"
`;
